# SpinalfMRIprep

./: .cursorignore  .gitignore  404.html  Dockerfile.sct  Dockerfile.spineprep  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  regenerate_s3_qc.py  sitemap.xml  temp_seg.json  test_sc_epi_seg.json
.agent/rules/: autopilot.md
.github/workflows/: ci.yml  docs.yml
DEVELOPMENT_WORKFLOW/: index.html
config/: datasets_local.yaml
contributing/: index.html
docs/: CNAME  DEVELOPMENT_WORKFLOW.md  cite.md  contributing.md  index.md  quickstart.md  setup.md  tutorial.md
docs/methods/: S0_setup.md  S10_confounds.md  S11_export.md  S1_input_verify.md  (+9 more)
overrides/: home.html
patches/: docs_regression_5keys_second_subject.patch
policy/: S2_anat_cordref.yaml  S3_func_init_and_crop.yaml  datasets.schema.yaml  datasets.yaml
schemas/: qc_S1_input_verify.json  qc_S2_anat_cordref.schema.json  qc_S3_func_init_and_crop.schema.json  runs_S1_input_verify.json
scripts/: acceptance_test.py  dev_cycle_full.sh  fetch_sct_docs.sh  get_next_workfolder.py  mark_done.py  migrate_workfolders.py  qc_standalone.py  regen_S2_reportlets_fullfov.py  run_s3_on_wf_reg.py  smoke_pl01_all.py  smoke_pl02.sh  smoke_s1.py  smoke_s2.py  smoke_s3_1.py  validate_regression.py  verify_s3.py
search/: search_index.json
setup/: index.html
tests/: test_S2_labeling.py  test_S3_qc_figures.py  test_S3_registration_params.py  test_S3_unit.py  test_pl00_setup.py  test_pl01_input_verify.py  test_policy_gate.py  test_qc_dashboard.py  test_s3_subtask_integration.py  test_subtask_execution.py
(+46 files in other folders)
