[tool.poetry]
name = "spineprep"
version = "0.0.1"
description = "SpinePrep pipeline utilities"
authors = ["SpinePrep Team <dev@spineprep.local>"]
readme = "README.md"
packages = [{ include = "spineprep", from = "src" }]

[tool.poetry.scripts]
spineprep = "spineprep.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyyaml = "^6.0.1"
jsonschema = "^4.23.0"
nibabel = "^5.2.1"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
