[tool.poetry]
name = "spineprep"
version = "0.0.1"
description = "SpinePrep pipeline utilities"
authors = ["SpinePrep Team <dev@spineprep.local>"]
readme = "README.md"
packages = [{ include = "spineprep", from = "src" }]

[tool.poetry.scripts]
spineprep = "spineprep.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyyaml = "^6.0.1"
jsonschema = "^4.23.0"
nibabel = "^5.2.1"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-glightbox = "^0.4.0"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
